页面暗色模式样式适配

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -29,7 +29,7 @@
   "layout4": "管理面板",
   "login": "登录",
   "logout": "注销",
-  "app.mybook.title": "我的书",
+  "app.mybook.title": "我的借阅",
   "theme-switcher": "暗色模式",
   "color-picker": "修改主题色",
   "theme-switcher2": "亮色模式"
