注册登录也更新

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,9 +5,23 @@
     "cancel": "Cancel"
   },
   "app": {
-    "title": "liberary management system",
+    "title": "ZhangYue liberary management system",
     "description": "a system for managing library resources"
   },
+  "login.title": "Login",
+  "login.subtitle": "Please enter your username and password to personalize your book borrowing experience.",
+  "login.username": "Username",
+  "login.username_placeholder": "Enter your username",
+  "login.username_required": "Please input username",
+  "login.username_min": "Username must be at least 3 characters",
+  "login.password": "Password",
+  "login.password_placeholder": "Enter your password",
+  "login.password_required": "Please input password",
+  "login.password_min": "Password must be at least 6 characters",
+  "login.no_account": "No account?",
+  "login.test_account": "Test Accounts",
+  "login.admin": "Admin",
+  "login.user": "User",
   "app.describtion": "welcom to library",
   "jie-shu": "borrow",
   "app.storefeature.title": "Feature",
@@ -32,5 +46,25 @@
   "app.mybook.title": "My Books",
   "theme-switcher": "switch theme",
   "color-picker": "exchange color",
-  "theme-switcher2": "light mode"
+  "theme-switcher2": "light mode",
+  "label-title": "Library Management System",
+  "register.username_required": "Need a username",
+  "register.title": "Register",
+  "register.subtitle": "Register a new account",
+  "register.username": "username",
+  "register.username_placeholder": "please place a username",
+  "register.password": "password",
+  "register.password_placeholder": "please place a password",
+  "register.confirm": "confirm",
+  "register.confirm_placeholder": "please confirm your password",
+  "actions.back": "back",
+  "actions.reset": "reset",
+  "actions.register": "register",
+  "register.has_account": "Have a account?",
+  "actions.login": "Login",
+  "register.username_min": "Username must at least three words",
+  "register.password_required": "Need a password",
+  "register.password_min": "Passwords' length must at least six",
+  "register.confirm_required": "Need to confirm your password",
+  "register.confirm_error": "confirm error！"
 }
