--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -5,9 +5,23 @@
     "cancel": "取消"
   },
   "app": {
-    "title": "图书馆管理系统",
+    "title": "掌阅图书馆管理系统",
     "description": "一个用于管理图书馆资源的系统"
   },
+  "login.title": "登录",
+  "login.subtitle": "请输入账号密码来进行个性化您的图书借阅",
+  "login.username": "用户名",
+  "login.username_placeholder": "请输入用户名",
+  "login.username_required": "请输入用户名",
+  "login.username_min": "用户名至少3位",
+  "login.password": "密码",
+  "login.password_placeholder": "请输入密码",
+  "login.password_required": "请输入密码",
+  "login.password_min": "密码至少6位",
+  "login.no_account": "没有账号？",
+  "login.test_account": "测试账户",
+  "login.admin": "管理员",
+  "login.user": "普通用户",
   "app.describtion": "欢迎来到图书馆",
   "jie-shu": "借书",
   "app.storefeature.title": "书店特色",
@@ -32,5 +46,25 @@
   "app.mybook.title": "我的借阅",
   "theme-switcher": "暗色模式",
   "color-picker": "修改主题色",
-  "theme-switcher2": "亮色模式"
+  "theme-switcher2": "亮色模式",
+  "label-title": "掌阅图书系统",
+  "register.title": "注册",
+  "register.subtitle": "注册新帐户",
+  "register.username": "用户名",
+  "register.username_placeholder": "请输入用户名",
+  "register.password": "密码",
+  "register.password_placeholder": "请输入密码",
+  "register.confirm": "确认密码",
+  "register.confirm_placeholder": "请确认您的密码",
+  "actions.back": "返回",
+  "actions.reset": "重置",
+  "actions.register": "注册",
+  "register.has_account": "已有帐户？",
+  "actions.login": "登录",
+  "register.username_required": "请输入用户名",
+  "register.username_min": "用户名必须至少三个字",
+  "register.password_required": "请输入密码",
+  "register.password_min": "至少6位密码",
+  "register.confirm_required": "请确认您的密码",
+  "register.confirm_error": "注册失败"
 }
